LendingTree Lead Onboarding Automation/main/default/objects/Template__c/Template__c.object-meta.xml
<CustomObject>
    <description>A Template Object</description>
    <label>Template</label>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>