LendingTree Lead Onboarding Automation/main/default/objects/Template__c/fields/Is_Merge_Field_Verified__c.field-meta.xml
<CustomField>
    <fullName>Is_Merge_Field_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Merge Field Verified</label>
    <type>Checkbox</type>
</CustomField>