LendingTree Lead Onboarding Automation/main/default/objects/Template__c/fields/ParentSObject__c.field-meta.xml
<CustomField>
    <fullName>ParentSObject__c</fullName>
    <label>ParentSObject</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>