LendingTree Lead Onboarding Automation/main/default/objects/Template__c/fields/Template_body__c.field-meta.xml
<CustomField>
    <fullName>Template_body__c</fullName>
    <label>Template body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>